[gd_scene load_steps=2 format=3 uid="uid://b3awkhhipfn4c"]

[ext_resource type="Script" uid="uid://qagqdts4ggad" path="res://ui/game_ui.gd" id="1_dcmab"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_dcmab")

[node name="HealthLabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -63.0
offset_right = 40.0
offset_bottom = -40.0
grow_vertical = 0

[node name="EnemyCounterLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2

[node name="UpgradeScreen" type="Panel" parent="."]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeScreen"]
layout_mode = 0
offset_left = -19.0
offset_top = -16.0
offset_right = 21.0
offset_bottom = 24.0

[node name="Label" type="Label" parent="UpgradeScreen"]
layout_mode = 0
offset_left = -9.0
offset_top = -170.0
offset_right = 150.0
offset_bottom = -147.0
text = "Escolha um Upgrade"

[node name="UpgradeButton1" type="Button" parent="UpgradeScreen"]
layout_mode = 0
offset_left = -23.0
offset_top = -59.0
offset_right = 209.0
offset_bottom = -28.0
text = "Aumentar Vida MÃ¡xima (+50)"

[node name="UpgradeButton2" type="Button" parent="UpgradeScreen"]
layout_mode = 0
offset_left = 221.0
offset_top = -58.0
offset_right = 334.0
offset_bottom = -27.0
text = "Placeholder 1"

[node name="UpgradeButton3" type="Button" parent="UpgradeScreen"]
layout_mode = 0
offset_left = -154.0
offset_top = -59.0
offset_right = -41.0
offset_bottom = -28.0
text = "Placeholder 2"

[node name="PauseMenu" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Retornar"

[node name="MainMenuButton" type="Button" parent="PauseMenu/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Voltar ao Menu"

[node name="StaminaLabel" type="Label" parent="."]
offset_top = 613.0
offset_right = 40.0
offset_bottom = 636.0

[connection signal="pressed" from="UpgradeScreen/UpgradeButton1" to="." method="_on_upgrade_button_1_pressed"]
